# website-no-dig-v1

./: .gitignore  cost-guide.html  index.html  projects.html  style.css
locations/: abbotsford.html  burnaby.html  coquitlam.html  langley.html  richmond.html  surrey.html  vancouver.html
research/: Strategic-Playbook.md  market_overview.md  seo_strategy_vancouver.md
research/competitors/: drainmastertrenchless_com_20260222_032600.md  highmarkplumbing_com_20260222_032645.md  nuflowbc_com_20260222_032530.md  thesuperplumber_com_20260222_032430.md  trifectaplumbing_ca_20260222_032329.md
services/: cipp-lining.html  hydro-jetting-cleaning.html  manhole-rehabilitation.html  municipal-industrial.html
tools/awesome-seo/docs/: output.css
tools/competitor-analyst/: README.md
tools/deep-competitive-analyst/: .gitignore  README.md  pyproject.toml
tools/deep-competitive-analyst/example_output/: README.md  company_profile_Asana.md  company_profile_Linear.md  competitive_analysis.md
tools/deep-competitive-analyst/src/: agent.py  langgraph.json  models.py  prompts.py  sub_agents.py  tools.py
tools/firecrawl-researcher/: crawl_competitors.py  requirements.txt
