[project]
name = "competitive-analysis-agent"
version = "0.1.0"
description = "Competitive Analysis Deep Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents==0.2.8",
    "langchain-openai==1.0.1",
    "langchain==1.0.2",
    "langgraph-cli[inmem]>=0.4.4",
    "perplexityai==0.17.1",
    "ratelimit>=2.2.1",
]
